# sensor-network

./: .gitignore  Makefile  README.md
air-quality-node/: Makefile  README.md
air-quality-node/air-quality-node/: air-quality-node.ino  aqi-sensor.cpp  aqi-sensor.h  arduino_secrets.h.example  bsp.h  display.cpp  display.h  environment-sensor.cpp  environment-sensor.h  loop-timer.h  ring-buffer.h  webserver.cpp  webserver.h
docs/: sensor-network-diagrams.drawio
influxdb/: mqtt_influxdb_bridge.py
light-node/: Makefile
light-node/light-node/: bsp.h  light-node.ino  loop-timer.h
sensor-node/: Makefile  arduino_secrets.h.example  sensor-node.ino  webserver.cpp
sensor-node/sensor-node/: bsp.h  sensor-node.ino  temp-sensor.h  webserver.h
status-page/: mqtt-client.py  setup.cfg  status-page.py
status-page/static/: style.css
status-page/templates/: index.html
temp-network/: arduino_secrets.h  bsp.h  temp-network.ino  temp-sensor.cpp  temp-sensor.h  webserver.cpp  webserver.h
temp-node/: Makefile  README.md
temp-node/temp-node/: bsp.h  temp-node.ino  webserver.cpp
