[metadata]
name = status-page
version = 0.0.1
author = Robert Ussery
author_email = robert@ussery.info
description = Status page for a network of home sensors
long_description = file: ../README.md
long_description_content_type = text/markdown
url = https://github.com/russery/temp-network
project_urls =
    Bug Tracker = https://github.com/russery/temp-network/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    flask
    paho-mqtt
    pylint
    yapf
